--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 
         <!-- Main content: Map tab and Editor tab (hidden/shown by tabs) -->
         <main class="">
+            <!-- Toast Notification -->
+            <div id="toast" class="fixed top-4 mr-50 z-50 hidden"> <!-- RTL: put toast left -->
+                <div id="toastMsg" class="px-4 py-2 rounded shadow-lg font-bold flex items-center gap-2"></div>
+            </div>
             <!-- Map container -->
             <section id="mapContainer">
                 <div id="headerControls" class="flex items-center gap-4 bg-gray-600 text-gray-200 rounded-lg p-2 mb-2 mt-16">
@@ -73,10 +77,7 @@
                 <!-- Editor area -->
                 <main class="max-w-7xl mx-auto w-full pt-2 pb-24 px-2"> <!-- extra bottom padding so fixed footer doesn't cover content -->
                     <div id="editor" class="space-y-6"></div>
-                    <!-- Toast Notification -->
-                    <div id="toast" class="fixed top-6 z-50 hidden"> <!-- RTL: put toast left -->
-                        <div id="toastMsg" class="px-4 py-2 rounded shadow-lg font-bold flex items-center gap-2"></div>
-                    </div>
+                    
                 </main>
 
                 <!-- Editor footer (fixed to viewport bottom) -->
@@ -307,12 +308,6 @@
             const c = 2*Math.atan2(Math.sqrt(a), Math.sqrt(1-a)); return R*c;
         }
 
-        // Ensure map and base layer exist
-        if (!map) {
-            map = L.map('map').setView([20, 0], 2);
-            baseLayer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { maxZoom: 18, attribution: '© OpenStreetMap contributors' }).addTo(map);
-        }
-
         // Clear previous overlays but keep base layer
         if (map) {
             map.eachLayer(function(layer) { if (layer !== baseLayer) map.removeLayer(layer); });
@@ -485,7 +480,6 @@
             dayDiv.addEventListener('dragover', function(e) { e.preventDefault(); dayDiv.classList.add('ring-2','ring-blue-400'); });
             dayDiv.addEventListener('dragleave', function(e) { dayDiv.classList.remove('ring-2','ring-blue-400'); });
             dayDiv.addEventListener('drop', function(e) { 
-                console.log('Day drop event');
                 e.preventDefault(); 
                 e.stopPropagation();
                 dayDiv.classList.remove('ring-2','ring-blue-400'); 
@@ -495,9 +489,7 @@
                 if (dataType === 1) {
                     // moving attraction, not day
                     const attrIdx = parseInt(e.dataTransfer.getData('attrIdx'));
-                    console.log(`Reordering attraction ${attrIdx} from day ${fromIdx} to day ${toIdx}`);
                     const moved = placesData[fromIdx].attractions.splice(attrIdx,1)[0]; 
-                    console.log(moved.name, moved.lat, moved.lng, moved.url, moved.time);
                     if (!placesData[dayIdx].attractions) placesData[dayIdx].attractions = [];
                     placesData[toIdx].attractions.push(moved); 
                     renderEditor(); 
@@ -582,7 +574,6 @@
             });
             attrDiv.addEventListener('dragleave', function(e) { attrDiv.classList.remove('ring-2','ring-blue-400'); });
             attrDiv.addEventListener('drop', function(e) { 
-                console.log('Attraction drop event');
                 e.preventDefault();
                 attrDiv.classList.remove('ring-2','ring-blue-400'); 
                 const fromIdx = parseInt(e.dataTransfer.getData('attrIdx')); 
@@ -597,7 +588,6 @@
                 if (fromDayIdx === dayIdx && fromIdx !== toIdx) { 
                     e.stopPropagation();
                     //same day, just reorder
-                    console.log(`Reordering attraction from ${fromIdx} to ${toIdx} in day ${dayIdx}`);
                     const moved = placesData[dayIdx].attractions.splice(fromIdx,1)[0]; 
                     placesData[dayIdx].attractions.splice(toIdx,0,moved); 
                     renderEditor(); 
@@ -810,6 +800,10 @@
         yesBtn.addEventListener('click', onYes); noBtn.addEventListener('click', onNo);
     }
 
+    function init_map() {
+
+    }
+
     // File loader wiring (only in editor tab)
     document.addEventListener('DOMContentLoaded', function() {
         const mapTab = document.getElementById('tabMap'); const editorTab = document.getElementById('tabEditor'); const mapContainer = document.getElementById('mapContainer'); const editorContainer = document.getElementById('editorContainer');
@@ -822,7 +816,8 @@
             renderEditor();
             // do not auto-enable routing here; showMap will enable and refresh
             // but populate map overlays (preview)
-            if (!map) { map = L.map('map').setView([20,0],2); baseLayer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { maxZoom:18, attribution:'© OpenStreetMap contributors' }).addTo(map); }
+            if (!map) { 
+                map = L.map('map').setView([20,0],2); baseLayer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { maxZoom:18, attribution:'© OpenStreetMap contributors' }).addTo(map); }
             loadPlaces(placesData);
         }
     function showMap() { editorContainer.classList.add('hidden'); mapContainer.classList.remove('hidden'); if (headerControlsEl) headerControlsEl.classList.remove('hidden'); routingEnabled = true; refreshMapDebounced(200); }
@@ -831,7 +826,33 @@
     showMap();
 
         // Initialize map once (world view)
-        if (!map) { map = L.map('map').setView([20,0],2); baseLayer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { maxZoom:18, attribution:'© OpenStreetMap contributors' }).addTo(map); }
+        if (!map) { 
+            map = L.map('map').setView([20,0],2); baseLayer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { maxZoom:18, attribution:'© OpenStreetMap contributors' }).addTo(map); }
+
+        if (map)
+        {
+            // Add right-click to copy lat/lng and prevent default context menu
+            map.on('contextmenu', function(e) {
+                if (e.originalEvent) e.originalEvent.preventDefault();
+                const lat = e.latlng.lat.toFixed(4);
+                const lng = e.latlng.lng.toFixed(4);
+                const text = `${lat},${lng}`;
+                if (navigator.clipboard) {
+                    navigator.clipboard.writeText(text).then(() => {
+                        if (typeof showToast === 'function') {showToast('קואורדינטות: ' + text);}
+                    });
+                } else {
+                    // fallback for older browsers
+                    const temp = document.createElement('textarea');
+                    temp.value = text;
+                    document.body.appendChild(temp);
+                    temp.select();
+                    try { document.execCommand('copy'); } catch (err) {}
+                    document.body.removeChild(temp);
+                    if (typeof showToast === 'function') {showToast('קואורדינטות: ' + text);}
+                }
+            });
+        }
 
         // File loader in editor
         const fileInput = document.getElementById('fileLoader'); const fileBtn = document.getElementById('fileLoaderBtn');
